microservice-examples/traffic-management/destination-rule-service-b-circuitBreaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-b
spec:
  host: service-b
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
    outlierDetection:
      consecutiveErrors: 1
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
