microservice-examples/traffic-management/vs-service-b-90-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
spec:
  hosts:
    - service-b
  http:
    - route:
        - destination:
            host: service-b
            subset: v1
          weight: 90
        - destination:
            host: service-b
            subset: v2
          weight: 10
