microservice-examples/traffic-management/vs-service-b-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
spec:
  hosts:
    - service-b
  http:
    - route:
        - destination:
            host: service-b
            subset: v1
          weight: 50
        - destination:
            host: service-b
            subset: v2
          weight: 50
      fault:
        abort:
          httpStatus: 503
          percentage:
            value: 100
