microservice-examples/traffic-management/vs-service-b-timeout-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
spec:
  hosts:
    - service-b
  http:
    - match:
        - uri:
            prefix: /api/timeou
      route:
        - destination:
            host: service-b
            subset: v1
          weight: 50
        - destination:
            host: service-b
            subset: v2
          weight: 50
      timeout: 2s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 'gateway-error,connect-failure,refused-stream'
